# filer

./: README.md  main.py  pyproject.toml
filer/: __init__.py
filer/backend/: __init__.py  file_watcher.py  filesystem.py  models.py
filer/frontend/: __init__.py  command_palette.py  file_pane.py  main_window.py
