[project]
name = "filer"
version = "0.1.0"
description = "A modern, cross-platform GUI file manager built with Python and Qt"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6.0",
    "watchdog>=6.0.0",
]
license = { file = "LICENSE" }
authors = [
    { name = "Keith Hall" }
]
